# story-cv.github.io

./: .gitignore  .replit  BingSiteAuth.xml  CNAME  README.md  about-us.html  blog.html  bullet-compare.js  cookie-banner.js  footer.js  generate_sitemap.py  header.js  index.html  package-lock.json  package.json  privacy-policy  privacy-policy.html  pyproject.toml  replit.md  robots.txt  script.js  script_old.js  scroll-animation.js  sitemap.xml  student-resume.html  style.css  terms-of-service  terms-of-service.html  update_sitemap.sh
about-us/: index.html
attached_assets/: Olivia Davies - After_1757599256760.txt  Olivia Davies - Before_1757599256761.txt  Pasted--2-style-css-Visuals-Layout-Tab-Navigation-Styling--1753068516345_1753068516345.txt  Pasted--2-style-css-Visuals-Layout-Tab-Navigation-Styling-Style-tabs-na-1753068506911_1753068506913.txt  Pasted--Frequently-Asked-Questions-Q-What-is-StoryCV-A-StoryCV-is-an-intelligen-1752735831067_1752735831073.txt  Pasted--I-was-on-maternity-break-If-you-re-here-there-s-a-good_1775550549659.txt  Pasted--Passing-the-ATS-is-the-easiest-and-the-most-pointless-part-If-you-re-looking-for-a-job-y-1761201133213_1761201133225.txt  Pasted--System-Prompt-Replit-URL-Cleanup-and-File-Restructuring-Goal-Refactor-the-exist-1764057992235_1764057992235.txt  Pasted--The-1-Question-to-Ask-Before-Hiring-a-Resume-Writer-The-modern-job-market-is-a-competitive-place-1757061941708_1757061941710.txt  Pasted-Effective-Date-01-Aug-2025-This-Privacy-Policy-describes-how-StoryCV-we-our-or-us-collec-1754556071753_1754556071755.txt  (+10 more)
blog/: README.md  (+4 more)
(+29 files in other folders)
